# SeaLion

./: .gitignore  DimensionalityReduction.py  Exponential and Polynomial Regression-2.ipynb  Exponential and Polynomial Regression.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  classification_regression_example-2.ipynb  classification_regression_example.ipynb  decision_trees_example-2.ipynb  deep_learning_example.ipynb  dimensionality_reduction_example.ipynb  dimensionality_reduction_example.py  ensemble_learning.ipynb  ensemble_learning.py  exponential_and_polynomial_regression.ipynb  gif.md  linear_regression_example-2.ipynb  linear_regression_example.ipynb  mnist_example.py  nearest_neighbors.py  nearest_neighbors_example.ipynb  nearest_neighbors_example.py.ipynb  neural_networks_example.py  requirements.txt  setup.cfg  setup.py  unsupervised_clustering_example.ipynb  unsupervised_clustering_example.py
docs/: conf.py  decision_trees.rst  ensemble_learning.rst  index.rst  install.rst  mixtures.rst  nearest_neighbors.rst  nn.rst  regression.rst  utils.rst
eexamples/: naive_bayes_examples.ipynb
examples/: README.md  deep_learning_example.ipynb  dimensionality_reduction_example.ipynb  ensemble_learning.ipynb  gaussian_mixtures.ipynb  more_neural_networks_examples.ipynb  naive_bayes_examples-2.ipynb  regularized_regression_example.ipynb
sealion/: DimensionalityReduction.py  README.md  __init__.py  cython_decision_tree_functions.c  cython_decision_tree_functions.pyx  cython_ensemble_learning.c  cython_ensemble_learning.pyx  cython_knn.c  cython_knn.pyx  mixtures.py  (+15 more)
(+19 files in other folders)
