[metadata]
name            = sealion
author          = Anish Lakkapragada
author-email    = anish.lakkapragada@gmail.com
description-file = README.md
long-description-content-type = text/markdown
requires-python = >=3
project_urls =
    Source Code = https://github.com/anish-lakkapragada/sealion
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
keywords =
    Machine Learning, Data Science, Python
