[metadata]
name            = sealion
author          = Anish Lakkapragada
author-email    = anish.lakkapragada@gmail.com
description-file = README.md
long-description-content-type = text/markdown
requires-python = >=3
project_urls =
    Source Code = https://github.com/anish-lakkapragada/SeaLion
license = Apache
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
        
keywords =
    Machine Learning, Data Science, Python
